# e-commerce-toolbox

./: .dockerignore  .gitignore  .gitlab-ci.yml  .replit  package-lock.json  package.json  pyproject.toml  replit.md
.github/workflows/: sync-gitlab.yml
attached_assets/: Ecovis_Mandanten_Plattform_1768905191666.docx  Pasted--Stripe-OAuth-2-0-Integration-f-r-Mandanteninformatione_1772011049400.txt  Test_2_2026_result_(4)_1770109960292.csv
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AppSidebar.tsx  ThemeToggle.tsx
client/src/hooks/: use-auth.ts
client/src/lib/: auth-client.ts
client/src/pages/: DashboardPage.tsx  ExportsPage.tsx  LandingPage.tsx  LoginPage.tsx  MacrosPage.tsx  MandantSettingsPage.tsx  MandantenListPage.tsx  ProcessBuilderPage.tsx  ProcessExecutePage.tsx  ProcessExecutionsPage.tsx  ProcessHistoryPage.tsx  ProcessesPage.tsx  UsersPage.tsx  VorlagenPage.tsx
docker/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.yml
migrations/: 0000_bouncy_vanisher.sql
migrations/meta/: 0000_snapshot.json  _journal.json
python_service/: main.py
server/: index.ts  python-transform.ts  routes.ts  storage.ts
server/lib/: auth-middleware.ts  auth.ts  file-storage.ts  oauth-providers.ts
server/replit_integrations/object_storage/: routes.ts
shared/: schema.ts
shared/schema/: auth.ts
