[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "xlrd>=2.0.2",
]
